--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-scripts": "1.1.5",
+    "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.5"
   },
   "scripts": {
